--- a/Test/DesktopSearch.Core.Tests/packages.config
+++ b/Test/DesktopSearch.Core.Tests/packages.config
@@ -7,6 +7,9 @@
   <package id="Lucene.Net.Analysis.Common" version="4.8.0.770-beta" targetFramework="net461" />
   <package id="Lucene.Net.Misc" version="4.8.0.770-beta" targetFramework="net461" />
   <package id="Lucene.Net.QueryParser" version="4.8.0.770-beta" targetFramework="net461" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net461" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.3.2" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.3.2" targetFramework="net461" />
@@ -24,6 +27,7 @@
   <package id="NEST" version="5.0.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="Nito.AsyncEx" version="4.0.1" targetFramework="net461" />
   <package id="NUnit" version="3.5.0" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
