--- a/DesktopSearch.PS/DesktopSearch.PS.csproj
+++ b/DesktopSearch.PS/DesktopSearch.PS.csproj
@@ -285,6 +285,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cmdlets\AddDSDocumentCollectionCmdlet.cs" />
+    <Compile Include="Cmdlets\AddDSFolderToDocumentCollectionCmdlet.cs" />
     <Compile Include="Cmdlets\EditTagCmdlet.cs" />
     <Compile Include="Cmdlets\GetDSDocumentCollection.cs" />
     <Compile Include="Cmdlets\GetTikaExtractCmdlet.cs" />
