--- a/DesktopSearch.PS/DesktopSearch.PS.csproj
+++ b/DesktopSearch.PS/DesktopSearch.PS.csproj
@@ -292,6 +292,7 @@
     <Compile Include="Cmdlets\GetTikaExtractRawCmdlet.cs" />
     <Compile Include="Cmdlets\ImportDSContentCmdlet.cs" />
     <Compile Include="Cmdlets\InitializeDSIndexCmdlet.cs" />
+    <Compile Include="Cmdlets\OpenDSLukeCmdlet.cs" />
     <Compile Include="Cmdlets\RemoveDSDocumentCollectionCmdlet.cs" />
     <Compile Include="Cmdlets\SaveDSSettingCmdlet.cs" />
     <Compile Include="Cmdlets\SearchDSCmdlet.cs" />
